[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/menu.mp3" type="AudioStream" id=1]
[ext_resource path="res://scripts/AudioPlayers.gd" type="Script" id=2]
[ext_resource path="res://assets/game.mp3" type="AudioStream" id=3]

[node name="AudioPlayers" type="Node"]
script = ExtResource( 2 )

[node name="SlowDownTimer" type="Timer" parent="."]
one_shot = true

[node name="MenuMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[node name="GameMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
